frontend/src/app/modules/members/members-page/members-page.component.sass
@import src/styles/variables
@import src/styles/mixins

.invite-wrapper
    display: flex
    flex-direction: row
    justify-content: space-between
    align-items: center
    padding: 20px
    @include title
    @include background-gray

.members-container
    padding: 20px
    display: flex
    flex-direction: column

.filter
    display: flex
    flex-direction: row
    align-items: center
    grid-gap: 20px
    padding: 20px
    .search-members
        width: 100%

.filter-input
    margin-bottom: 20px

.table-header-cell
    display: flex !important
    justify-content: space-between
    align-items: center

.buttons
    display: flex
    flex-direction: row
    grid-gap: 10px
td
    overflow: hidden
    vertical-align: top

    button
        white-space: nowrap

    .content
        min-height: $input-height
        display: flex
        grid-gap: 10px
        align-items: center

    .delete-col
        justify-content: space-between

    .email
        width: 100%
        height: 1rem
        text-overflow: ellipsis
        overflow-x: clip
        white-space: nowrap

.small-button
    box-shadow: none
    height: 20px
    width: 20px

.team-col
    .one-team,
    .no-team
        padding: 8px
:host ::ng-deep
    .p-tree
        border: none
        padding: 0
    .p-tree .p-tree-container .p-treenode
        padding: 0
    .p-treenode-content
        height: $input-height

    .p-dropdown
        height: $input-height
        align-items: center
    .p-dropdown-label
        display: flex
        align-items: center

    .team-col-dropdown
        border: none
        .p-dropdown-label.p-placeholder
            color: $text-color
::ng-deep
    .team-col-panel
        .p-disabled,
        .p-component:disabled
            opacity: 1 !important

@media screen and ( max-width:1150px  )
    .team-col
        display: none

@media screen and ( max-width:900px  )
    .email-col
        display: none

